--- a/index.html
+++ b/index.html
@@ -1,48 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to My GitHub Page</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    header {
-      background-color: #007acc;
-      color: white;
-      padding: 20px 0;
-    }
-    header h1 {
-      margin: 0;
-    }
-    section {
-      padding: 20px;
-    }
-    footer {
-      background-color: #333;
-      color: white;
-      padding: 10px 0;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Welcome to My GitHub Page</h1>
-  </header>
-  <section>
-    <p>Hello, world! This is my first GitHub Pages website. Stay tuned for more updates!</p>
-  </section>
-  <footer>
-    <p>&copy; 2024 My GitHub Page</p>
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Charles Dave Wong | Portfolio</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-gray-50 text-gray-800 font-sans">
+    <header class="bg-blue-600 text-white py-4">
+      <div class="container mx-auto px-4 flex justify-between items-center">
+        <h1 class="text-2xl font-bold">Charles Dave Wong</h1>
+        <nav>
+          <ul class="flex space-x-4">
+            <li><a href="#about" class="hover:underline">About</a></li>
+            <li><a href="#skills" class="hover:underline">Skills</a></li>
+            <li><a href="#projects" class="hover:underline">Projects</a></li>
+            <li><a href="#contact" class="hover:underline">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <!-- About Section -->
+      <section id="about" class="py-12 bg-white">
+        <div class="container mx-auto px-4">
+          <div class="flex space-x-6">
+            <img src="profile.jpg" class="h-full max-h-96" />
+            <div class="flex flex-col items-start">
+              <h2 class="text-7xl font-semibold mb-4">Charles Dave Wong</h2>
+              <p class="text-gray-600 font-medium text-lg">
+                I am a PHP Web Developer with over 7 years of experience in
+                software development, specializing in building robust web
+                applications using PHP Laravel. I have a passion for creating
+                elegant, efficient, and scalable solutions for businesses.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Skills Section -->
+      <section id="skills" class="py-12 bg-gray-100">
+        <div class="container mx-auto px-4 text-center">
+          <h2 class="text-3xl font-semibold mb-4">My Skills</h2>
+          <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+            <div class="p-6 bg-white rounded-lg shadow">
+              <h3 class="text-xl font-bold">PHP</h3>
+              <p class="text-gray-600">
+                Expert in building back-end systems with PHP and Laravel.
+              </p>
+            </div>
+            <div class="p-6 bg-white rounded-lg shadow">
+              <h3 class="text-xl font-bold">Laravel</h3>
+              <p class="text-gray-600">
+                Extensive experience with Laravel for web development.
+              </p>
+            </div>
+            <div class="p-6 bg-white rounded-lg shadow">
+              <h3 class="text-xl font-bold">JavaScript</h3>
+              <p class="text-gray-600">
+                Proficient in front-end development with React.js & React Native
+              </p>
+            </div>
+            <div class="p-6 bg-white rounded-lg shadow">
+              <h3 class="text-xl font-bold">MySQL</h3>
+              <p class="text-gray-600">
+                Skilled in designing and managing MySQL databases.
+              </p>
+            </div>
+            <div class="p-6 bg-white rounded-lg shadow">
+              <h3 class="text-xl font-bold">APIs</h3>
+              <p class="text-gray-600">
+                Experience in building and integrating RESTful APIs.
+              </p>
+            </div>
+            <div class="p-6 bg-white rounded-lg shadow">
+              <h3 class="text-xl font-bold">Tailwind CSS</h3>
+              <p class="text-gray-600">
+                Expertise in responsive UI development using Tailwind CSS.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Projects Section -->
+      <section id="projects" class="py-12 bg-white">
+        <div class="container mx-auto px-4 text-center">
+          <h2 class="text-3xl font-semibold mb-4">My Projects</h2>
+          <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+            <div class="p-6 bg-gray-100 rounded-lg shadow">
+              <h3 class="text-xl font-bold">E-Commerce Website</h3>
+              <p class="text-gray-600">
+                A robust e-commerce platform built with Laravel and React.
+              </p>
+            </div>
+            <div class="p-6 bg-gray-100 rounded-lg shadow">
+              <h3 class="text-xl font-bold">Sales Invoice System</h3>
+              <p class="text-gray-600">
+                An intuitive invoicing system to streamline business operations.
+              </p>
+            </div>
+            <div class="p-6 bg-gray-100 rounded-lg shadow">
+              <h3 class="text-xl font-bold">Life Insurance App</h3>
+              <p class="text-gray-600">
+                A secure application for managing life insurance policies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section id="contact" class="py-12 bg-gray-100">
+        <div class="container mx-auto px-4 text-center">
+          <h2 class="text-3xl font-semibold mb-4">Contact Me</h2>
+          <p class="text-gray-700 mb-6">
+            Feel free to reach out for collaborations or inquiries.
+          </p>
+          <a
+            href="mailto:[wongcharlesdave@gmail.com]"
+            class="inline-block px-6 py-2 bg-blue-600 text-white rounded-lg shadow hover:bg-blue-700"
+            >Email Me</a
+          >
+        </div>
+      </section>
+    </main>
+
+    <footer class="bg-blue-600 text-white py-4">
+      <div class="container mx-auto px-4 text-center">
+        <p>&copy; 2024 Charles Dave Wong. All Rights Reserved.</p>
+      </div>
+    </footer>
+  </body>
 </html>
